# translation-service

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
src/clients/: __init__.py  translation.py
src/config/: __init__.py  defaults.py  log.py  settings.py
src/dependencies/: resources.py
src/endpoint/: app.py  routers.py
src/endpoint/views/api/: __init__.py  translation.py
src/enums/: translations.py
src/exceptions/: translation.py
src/lib/web_app/: __init__.py  lifespan.py  web_app.py
src/models/: translation.py
src/repositories/: words.py
src/schemas/: translation.py
src/services/translation/: parser.py  translation.py
